--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
           <div class="gallery-item">
             <div class="image-container">
-              <img src="images/Japan1.jpg" alt="Japan">
+              <img src="images/japan1.jpg" alt="Japan">
               <div class="overlay"></div>
               <div class="caption">Japan</div>
               <a href="gallery.html#JP" class="blue-button overlay-button">See more</a>
