--- a/gallery.html
+++ b/gallery.html
@@ -117,19 +117,19 @@
       <h2 id="JP">Japan</h2>
       <div class="grid-gallery">
         <div class="gallery-item">
-          <img src="images/Japan2.jpg" alt="Hiroshima, Japan">
+          <img src="images/japan2.jpg" alt="Hiroshima, Japan">
           <p>Hiroshima, Japan — Winter 2019</p>
         </div>
         <div class="gallery-item">
-          <img src="images/Japan3.jpg" alt="Kumamoto, Japan">
+          <img src="images/japan3.jpg" alt="Kumamoto, Japan">
           <p>Kumamoto, Japan — Fall 2017</p>
         </div>
         <div class="gallery-item">
-          <img src="images/Japan4.jpg" alt="Shizuoka, Japan">
+          <img src="images/japan4.jpg" alt="Shizuoka, Japan">
           <p>Shizuoka, Japan — Summer 2017</p>
         </div>
         <div class="gallery-item">
-          <img src="images/Japan1.jpg" alt="Aomori, Japan">
+          <img src="images/japan1.jpg" alt="Aomori, Japan">
           <p>Aomori, Japan — Summer 2017</p>
         </div>
       </div>
