--- a/gallery.html
+++ b/gallery.html
@@ -51,7 +51,7 @@
         <p><a href="gallery.html#CB" class="blue-button">Caribbean</a></p>
         <p><a href="gallery.html#JP" class="blue-button">Japan</a></p>
         <p><a href="gallery.html#US" class="blue-button">USA</a></p>
-        <p><a href="gallery.html#SEA" class="blue-button">South East Asia</a></p>
+        <p><a href="gallery.html#SA" class="blue-button">Southeast Asia</a></p>
       </div>
 
       <h2 id="CA">Canada</h2>
@@ -154,7 +154,7 @@
         </div>
       </div>
 
-      <h2 id="SEA">South East Asia</h2>
+      <h2 id="SA">Southeast Asia</h2>
       <div class="grid-gallery">
         <div class="gallery-item">
           <img src="images/singapore2.jpg" alt="Singapore">
