--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
             <div class="image-container">
               <img src="images/thailand1.jpg" alt="Thailand">
               <div class="overlay"></div>
-              <div class="caption">South East Asia</div>
-              <a href="gallery.html#SEA" class="blue-button overlay-button">See more</a>
+              <div class="caption">Southeast Asia</div>
+              <a href="gallery.html#SA" class="blue-button overlay-button">See more</a>
             </div>          
           </div>
         </div>
